--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         </section> 
         <!-- faq coding   -->
         <section class="container">
+          <h1 class="text-dark text-center my-lg-4">Frequently <span style="color: #E76F51;">Asked Questions</span> </h1>
             <div class="row gx-lg-5 align-items-center">
                 <div class="col-lg-6">
                  <div class="p-3">
@@ -225,6 +226,7 @@
         <!-- first extra section  -->
         <section class="container-fluid  py-5"style="background:#0E1E25">
           <div class="container">
+            
             <div class="row container  align-items-center justify-space-between ">
               <div class="col-lg-6 d-flex justify-content-start pe-lg-0"id="leftarea-image">
                 <img src="images/feature-bike-removebg-preview.png" class="img-fluid" alt="">
