--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="col-lg-6">
                     <div class="p-3">
                         <div class="accordion" id="accordionExample">
-                            <div class="accordion-item">
+                            <div class="accordion-item mb-3 shadow-lg">
                               <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                   Where We Loacted At
@@ -183,7 +183,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="accordion-item">
+                            <div class="accordion-item mb-3 shadow-lg">
                               <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                   My bike has been in storage is it safe to ride?
@@ -195,7 +195,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="accordion-item">
+                            <div class="accordion-item mb-3 shadow-lg">
                               <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                   How can I tell if my helmet is old and I need a 
@@ -208,7 +208,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="accordion-item">
+                            <div class="accordion-item shadow-lg">
                                 <h2 class="accordion-header" id="headingFour">
                                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                     What rules should I follow when riding my bike?                                  </button>
